--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "debug": "^4.1.1",
+    "dotenv": "^14.3.2",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-convert": "^1.2.0",
@@ -19,7 +23,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "pug": "^2.0.3"
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
